# Impression

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.agents/: index.md
.agents/coverage-discipline/: POLICY.yaml
.agents/potentials/: index.md
.agents/session-handoff/: SKILL.md
.agents/skills/: .system-skills-composer.json
.agents/workspace-index/: SKILL.md
.github/workflows/: ci.yml  release.yml
AIgents/: 4AIgents.yaml  README.md  development_guidance.md  release_template.md
agents/: architecture.md  delegation.md  documentation.md  git-and-github.md  index.md  planning.md  release-definitions.md  research.md  specifications.md  test-specifications.md  ui-definitions.md  ui-ux-invariants.md  workflow.md
agents/git-and-github-overlay/: SKILL.md
agents/modern-surface-first-guardrails/: SKILL.md
agents/workflow-impression-overlay/: SKILL.md
design-assets/: README.md
docs/: agents.md  cli.md  feature-pipeline.md  index.md  project-dna.md  project-plan.md  vscode.md
docs/agents/: index.md  loft.md
docs/brand/: brand-guide.md  design-system.md  style-guide.md
docs/findings/: 2025-11-11.md
docs/meetings/: 2025-11-11.md
docs/modeling/: advanced-patch-families.md  bspline.md  csg.md  drafting.md  drawing2d.md  extrusions.md  groups.md  heightmaps.md  hinges.md  loft.md  mesh-tools.md  morph.md  paths.md  primitives.md  progression.md  text.md  threading.md  transforms.md
docs/prs/: bugfix-camera-reset-on-hot-reload.md  bugfix-impression-preview-hot-reload.md  feature-config-unit-defaults.md
examples/: half_pipe.py  hello_cube.py
project/: README.md  future-features.md
scripts/: diagnose_preview.py  run_all_tests.py  run_preview_tests.py  run_stl_tests.py  text_suite.py
tests/: __init__.py  conftest.py  csg_reference_fixtures.py  helpers.py  loft_showcases.py  reference_images.py  test_advanced_patch_family_docs.py  test_bspline.py  test_cli_preview.py  test_control_station_inference.py  test_control_stations.py  test_documentation_rules.py  test_drafting.py  test_drawing2d.py  test_extrude.py  test_fit_records.py  test_heightmap.py  test_hinges.py  test_impress_io.py  test_inference_candidates.py  test_inference_descriptors.py  test_inference_diagnostics.py  test_inference_reporting.py  test_loft.py  test_loft_api.py  test_loft_authored_rail_priority.py  test_loft_correspondence.py  test_loft_correspondence_inference_policy.py  test_loft_correspondence_resampling.py  test_loft_kernel.py  test_loft_mesh_executor_correspondence.py  test_loft_point_birth_death_resolution.py  test_loft_point_lifecycle_records.py  test_loft_showcase.py  test_loft_suite.py  test_loft_surface_executor_correspondence.py  test_mesh_deprecations.py  test_mesh_tools.py  test_mesh_tools_docs.py  test_mesh_utility_quarantine.py  (+49 more)
(+1598 files in other folders)
