[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impression"
version = "0.0.1a7"
description = "Parametric modeling playground with real-time preview and STL export goals."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Impression contributors" }]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pyvista>=0.43.0",
    "watchfiles>=0.21.0",
    "manifold3d>=3.3.2",
    "mapbox_earcut>=2.0.0",
    "pyclipper>=1.3.0",
    "fonttools>=4.0.0",
    "markdown>=3.6",
    "Pillow>=10.0.0",
]

[project.scripts]
impression = "impression.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
