[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "impression"
version = "0.0.3a0"
description = "Parametric modeling playground with real-time preview and STL export goals."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Impression contributors" }]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
    "pyvista>=0.43.0",
    "watchfiles>=0.21.0",
    "manifold3d>=3.3.2",
    "mapbox_earcut>=2.0.0",
    "pyclipper>=1.3.0",
    "fonttools>=4.0.0",
    "markdown>=3.6",
    "Pillow>=10.0.0",
]

[project.scripts]
impression = "impression.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=6.0.0",
    "coverage[toml]>=7.6.0",
    "scikit-image>=0.24.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
branch = true
source = ["src/impression"]

[tool.coverage.report]
skip_covered = true
show_missing = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "project/coverage/html"

[tool.coverage.xml]
output = "project/coverage/coverage.xml"
